--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release
 
 on:
-  release:
-    types: [ released ]
-    branches: [ master ]
+  push:
+    tags:
+      - 'v*'
 
 env:
   CARGO_TERM_COLOR: always
@@ -20,6 +20,17 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Create release
+        id: create_releae
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
       - name: Install dependencies
         run: sudo apt install -y clang libclang-dev libopencv-dev
 
@@ -32,8 +43,15 @@ jobs:
       - name: Build release
         run: cargo build --release
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      - name: Compress binary
+        run: zip crowdstress-api crowdstress-api
+
+      - name: Upload release binary
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: crowdstress-api
-          path: ./target/release/crowdstress-api
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./target/release/crowdstress-api.zip
+          asset_name: crowdstress-api-${{ github.ref }}.zip
+          asset_content_type: application/zip
