--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         run: cargo build --release
 
       - name: Compress binary
-        run: zip crowdstress-api crowdstress-api
+        run: zip crowdstress-api ./target/release/crowdstress-api
 
       - name: Upload compressed release binary
         uses: actions/upload-release-asset@v1
@@ -52,6 +52,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/release/crowdstress-api.zip
+          asset_path: crowdstress-api.zip
           asset_name: crowdstress-api-${{ github.ref }}.zip
           asset_content_type: application/zip
