--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,5 +50,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: crowdstress-api.zip
-          asset_name: crowdstress-api-${{ github.ref }}.zip
+          asset_name: crowdstress-api.zip
           asset_content_type: application/zip
