--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ rocket_contrib = "0.4.7"
 image = "0.23.13"
 opencv = "0.49.1"
 nanoid = "0.3.0"
-crowdstress-common = { git = "https://github.com/xyz27900/crowdstress-common.git" }
+crowdstress-common = { git = "https://github.com/crowdstress/common.git" }
