--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -14,20 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: fusion-engineering/setup-git-credentials@v2
-      with:
-        credentials: ${{secrets.GIT_CREDENTIALS}}
-        
-    - uses: actions/checkout@v2
-    
-    - name: Install dependencies
-      run: sudo apt install -y clang libclang-dev libopencv-dev
-    
-    - name: Set nightly
-      run: rustup default nightly
-    
-    - name: Check
-      run: cargo check --verbose
-      
-    - name: Build
-      run: cargo build --verbose
+      - name: Setup credentials
+        uses: fusion-engineering/setup-git-credentials@v2
+        with:
+          credentials: ${{ secrets.GIT_CREDENTIALS }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: sudo apt install -y clang libclang-dev libopencv-dev
+
+      - name: Set nightly
+        run: rustup default nightly
+
+      - name: Check
+        run: cargo check --verbose
+
+      - name: Build
+        run: cargo build --verbose
