--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crowdstress-api"
 version = "0.1.0"
-authors = ["xyz27900 <xyz27900@gmail.com>"]
+authors = ["xyz27900 <kozlov.work.52@gmail.com>"]
 edition = "2018"
 
 [dependencies]
