--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crowdstress-math"
 version = "0.1.2"
-authors = ["xyz27900 <kozlov.work.52@gmail.com>"]
+authors = ["Evgenii Kozlov <kozlov.work.52@gmail.com>"]
 edition = "2018"
 
 [dependencies]
